--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -1,4 +1,10 @@
-{% include 'recipes/parcials/head.html' %}
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    {% include 'recipes/parcials/head.html' %}
+    <title>{% block title%}{% endblock title %} Recipes</title>
+</head>
 
 <body>
     {% include 'recipes/parcials/header.html' %}
@@ -10,7 +16,6 @@
     </main>
 
     {% include 'recipes/parcials/footer.html' %}
-
 </body>
 
 </html>
