adicionando paginacao no template

--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -12,7 +12,8 @@
 
     <main class="main-content-container">
         {% block content %}{% endblock content %}
-        </div>    
+        
+        {% include 'recipes/parcials/pagination.html' %}
     </main>
 
     {% include 'recipes/parcials/footer.html' %}
